- Fixed: Null array bug in ModuleIsotopeProductFilter
- Fixed: Null object bug in IsotopeCart
- Fixed: Disabled deprecated product storage in checkout module - now copies only product options to order items table.
- Fixed: Changed all price fields to use decimal(12,2) (payment gateways require 2 digit precision)
- Fixed: Table naming is not consistent, renamed tl_cart,tl_cart_items to tl_iso_cart,tl_iso_cart_items (Ticket #117)
- Removed: Paypal Website Payments Pro option - use Paypal Payflow Pro or Paypal Standard

Version 0.1.2 (2010-??-??)
------------------------------
- Fixed: Backend variant listing showed unassigned attributes (Ticket #135)
- Fixed problem with payment modules accepting only two digit floating point precision (Ticket #136)
- Fixed wrong grand total price in cart module (Ticket #137)
- Moved product tax class field to pricing legend (Ticket #134)

Version 0.1.1 (2010-06-06)
------------------------------
- Customer email is now sent to member email if no email in address book
- Fixed: Countries and shipping methods for payment modules are no longer mandatory
- Fixed: Subdivisions for shipping modules should now work correctly
- Fixed: Tax was not applied to flat price shipping
- Fixed: Final price for paypal standard payment module did not include taxes
- Fixed: Latest order did not appear in order history module
- Fixed: Checkout condition form did show invisible fields
- Fixed: Bug with minimum/maximum order total calculation.
- Fixed: missing price calculation function in Order Total shipping (Ticket #112)
- Fixed old image size message (Ticket #119)
- Fixed wrong template name for config switcher module
- Fixed product alias not generated correctly when alias field is before name (Ticket #123)
- Fixed template bug in iso_cart_full (Ticket #129)
- Fixed problem with checkout in Internet Explorer 6 (Ticket #128)

Version 0.1.0 stable (2010-05-23)
------------------------------
- Initial stable release