@@ -1,1 +1,0 @@
-<span class="totalPrice"><?php echo $this->currency . $this->price; ?></span>
