@@ -133,8 +133,8 @@ class ModuleGiftRegistryReader extends ModuleIsotope
 				'image'				=> 'isotope/' . substr($row['alias'], 0, 1) . '/' . $row['alias'] . '/' . $GLOBALS['TL_LANG']['MSC']['imagesFolder'] . '/' . $GLOBALS['TL_LANG']['MSC']['thumbnail_images_folder'] . '/' . $row['images'],
 				'name'				=> $row['name'],
 				'link'				=> $this->generateProductLink($row['alias'], $row, $this->Isotope->Config->productReaderJumpTo, $row['attribute_set_id'], 'id'),
-				'price'				=> $this->generatePrice($row['price']),
-				'total_price'		=> $this->generatePrice($intTotalPrice, 'stpl_total_price'),
+				'price'				=> $this->Isotope->formatPriceWithCurrency($row['price']),
+				'total_price'		=> $this->Isotope->formatPriceWithCurrency($intTotalPrice),
 				'quantity'			=> $row['quantity_requested'],
 				'quantity_remaining'=> $row['quantity_requested'] - $row['product_quantity'],
 				'source_cart_id'	=> $this->intCartId,
